start of making this responsive

--- a/Hoi Ultimate Bravery/imgui.ini
+++ b/Hoi Ultimate Bravery/imgui.ini
@@ -1,16 +1,16 @@
 [Window][Debug##Default]
 Pos=60,60
-Size=400,400
+Size=1024,768
 Collapsed=0
 
 [Window][Main Window]
 Pos=0,0
-Size=1920,1080
+Size=3840,2066
 Collapsed=0
 
 [Window][generate]
-Pos=760,200
-Size=1160,744
+Pos=1414,165
+Size=2176,1653
 Collapsed=0
 
 [Window][light]
@@ -160,6 +160,11 @@ Collapsed=0
 
 [Window][mainMenu]
 Pos=150,200
-Size=381,91
+Size=1168,1550
+Collapsed=0
+
+[Window][buttonBlock]
+Pos=163,165
+Size=1088,1653
 Collapsed=0
 
