--- a/Hoi Ultimate Bravery/imgui.ini
+++ b/Hoi Ultimate Bravery/imgui.ini
@@ -5,12 +5,12 @@ Collapsed=0
 
 [Window][Main Window]
 Pos=0,0
-Size=2243,1080
+Size=1920,1080
 Collapsed=0
 
 [Window][generate]
-Pos=826,86
-Size=1271,864
+Pos=662,86
+Size=1152,864
 Collapsed=0
 
 [Window][light]
@@ -164,7 +164,17 @@ Size=1168,1550
 Collapsed=0
 
 [Window][buttonBlock]
-Pos=95,86
-Size=635,864
+Pos=86,86
+Size=489,864
+Collapsed=0
+
+[Window][Main Block]
+Pos=86,86
+Size=1728,864
+Collapsed=0
+
+[Window][generateTest]
+Pos=748,129
+Size=990,777
 Collapsed=0
 
