update on responsive

--- a/Hoi Ultimate Bravery/imgui.ini
+++ b/Hoi Ultimate Bravery/imgui.ini
@@ -174,7 +174,22 @@ Size=1728,864
 Collapsed=0
 
 [Window][generateTest]
-Pos=662,86
-Size=619,864
+Pos=720,129
+Size=1036,777
+Collapsed=0
+
+[Window][Light_tank]
+Pos=720,187
+Size=100,200
+Collapsed=0
+
+[Window][Medium_tank]
+Pos=1136,187
+Size=100,200
+Collapsed=0
+
+[Window][Heavy_tank]
+Pos=1654,187
+Size=100,200
 Collapsed=0
 
