update on responsive

--- a/Hoi Ultimate Bravery/imgui.ini
+++ b/Hoi Ultimate Bravery/imgui.ini
@@ -5,12 +5,12 @@ Collapsed=0
 
 [Window][Main Window]
 Pos=0,0
-Size=1920,1080
+Size=3840,2066
 Collapsed=0
 
 [Window][generate]
-Pos=662,86
-Size=1152,864
+Pos=1324,165
+Size=2304,1653
 Collapsed=0
 
 [Window][light]
@@ -164,13 +164,13 @@ Size=1168,1550
 Collapsed=0
 
 [Window][buttonBlock]
-Pos=86,86
-Size=489,864
+Pos=172,165
+Size=979,1653
 Collapsed=0
 
 [Window][Main Block]
-Pos=86,86
-Size=1728,864
+Pos=172,165
+Size=3456,1653
 Collapsed=0
 
 [Window][generateTest]
@@ -179,17 +179,32 @@ Size=1036,777
 Collapsed=0
 
 [Window][Light_tank]
-Pos=720,187
+Pos=1440,363
 Size=100,200
 Collapsed=0
 
 [Window][Medium_tank]
-Pos=1136,187
+Pos=2374,363
 Size=100,200
 Collapsed=0
 
 [Window][Heavy_tank]
-Pos=1654,187
+Pos=3411,363
+Size=100,200
+Collapsed=0
+
+[Window][Fighter]
+Pos=720,187
+Size=100,200
+Collapsed=0
+
+[Window][CAS]
+Pos=1082,187
+Size=100,200
+Collapsed=0
+
+[Window][Naval_bomber]
+Pos=1599,187
 Size=100,200
 Collapsed=0
 
