--- a/Hoi Ultimate Bravery/imgui.ini
+++ b/Hoi Ultimate Bravery/imgui.ini
@@ -1,210 +1,174 @@
 [Window][Debug##Default]
 Pos=60,60
 Size=1024,768
-Collapsed=0
 
 [Window][Main Window]
 Pos=0,0
-Size=3840,2066
-Collapsed=0
+Size=1920,1080
 
 [Window][generate]
-Pos=1324,165
-Size=2304,1653
-Collapsed=0
+Pos=662,86
+Size=1152,864
 
 [Window][light]
 Pos=-354,200
 Size=1108,569
-Collapsed=0
 
 [Window][Light Tank]
 Pos=411,200
 Size=1108,569
-Collapsed=0
 
 [Window][heavy]
 Pos=-354,200
 Size=1108,569
-Collapsed=0
 
 [Window][medium]
 Pos=-354,200
 Size=1108,569
-Collapsed=0
 
 [Window][modern]
 Pos=1250,200
 Size=135,238
-Collapsed=0
 
 [Window][destroyer]
 Pos=411,200
 Size=1108,569
-Collapsed=0
 
 [Window][lightCruiser]
 Pos=500,200
 Size=142,257
-Collapsed=0
 
 [Window][heavyCruiser]
 Pos=500,200
 Size=142,238
-Collapsed=0
 
 [Window][tankDesigned]
 Pos=250,200
 Size=44,32
-Collapsed=0
 
 [Window][shipDesigned]
 Pos=1000,500
 Size=65,32
-Collapsed=0
 
 [Window][options]
 Pos=832,200
 Size=307,144
-Collapsed=0
 
 [Window][dlc]
 Pos=500,200
 Size=68,33
-Collapsed=0
 
 [Window][superHeavy]
 Pos=1000,200
 Size=114,238
-Collapsed=0
 
 [Window][generateAll]
 Pos=93,-13
 Size=181,540
-Collapsed=0
 
 [Window][battleship]
 Pos=750,200
 Size=142,238
-Collapsed=0
 
 [Window][carrier]
 Pos=1000,200
 Size=142,143
-Collapsed=0
 
 [Window][submarine]
 Pos=1250,200
 Size=114,105
-Collapsed=0
 
 [Window][battlecruiser]
 Pos=750,200
 Size=142,238
-Collapsed=0
 
 [Window][small]
 Pos=411,200
 Size=1108,569
-Collapsed=0
 
 [Window][planeDesigned]
 Pos=1250,200
 Size=51,32
-Collapsed=0
 
 [Window][large]
 Pos=411,200
 Size=1108,569
-Collapsed=0
 
 [Window][fighter]
 Pos=250,200
 Size=100,67
-Collapsed=0
 
 [Window][cas]
 Pos=500,200
 Size=149,67
-Collapsed=0
 
 [Window][navalBombing]
 Pos=750,200
 Size=135,32
-Collapsed=0
 
 [Window][tacticalBombing]
 Pos=1000,200
 Size=156,67
-Collapsed=0
 
 [Window][strategicBombing]
 Pos=1250,200
 Size=163,67
-Collapsed=0
 
 [Window][superHeavyBattleship]
 Pos=750,200
 Size=191,238
-Collapsed=0
 
 [Window][##]
 Pos=411,200
 Size=1108,569
-Collapsed=0
 
 [Window][error]
 Pos=960,200
 Size=32,32
-Collapsed=0
 
 [Window][mainMenu]
 Pos=150,200
 Size=1168,1550
-Collapsed=0
 
 [Window][buttonBlock]
-Pos=172,165
-Size=979,1653
-Collapsed=0
+Pos=86,86
+Size=489,864
 
 [Window][Main Block]
-Pos=172,165
-Size=3456,1653
-Collapsed=0
+Pos=86,86
+Size=1728,864
 
 [Window][generateTest]
 Pos=720,129
 Size=1036,777
-Collapsed=0
 
 [Window][Light_tank]
-Pos=1440,363
+Pos=720,187
 Size=100,200
-Collapsed=0
 
 [Window][Medium_tank]
-Pos=2374,363
+Pos=1136,187
 Size=100,200
-Collapsed=0
 
 [Window][Heavy_tank]
-Pos=3411,363
+Pos=1654,187
 Size=100,200
-Collapsed=0
 
 [Window][Fighter]
 Pos=720,187
 Size=100,200
-Collapsed=0
 
 [Window][CAS]
 Pos=1082,187
 Size=100,200
-Collapsed=0
 
 [Window][Naval_bomber]
 Pos=1599,187
 Size=100,200
-Collapsed=0
+
+[Table][0x2EF00F5B,3]
+RefScale=16
+Column 0  Width=400
+Column 1  Width=515
+Column 2  Width=492
 
